# fl-backdoor-system

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak
backend/: batch_manager.py  config_manager.py  experiment_runner.py  main.py  results_scanner.py
fl_backdoor/: __init__.py  config.py  task.py
fl_backdoor/attacks/: __init__.py  badnets.py  base.py  dba.py  fcba.py  frequency.py  selection.py  wanet.py
fl_backdoor/client/: client.py
fl_backdoor/dataset/: __init__.py  base.py  cifar10.py  config.py  mnist.py
fl_backdoor/defenses/: __init__.py  base.py  krum.py  norm_clipping.py  pipeline.py  trimmed_mean.py
fl_backdoor/defenses/client/: __init__.py  base.py  data_filter.py
fl_backdoor/defenses/server/aggregation/: krum.py  norm_clipping.py  trimmed_mean.py
fl_backdoor/defenses/server/detection/: __init__.py  anomaly_detection.py  base.py  clustering_detection.py  cosine_detection.py  features.py  score_detection.py
fl_backdoor/server/: server.py
fl_backdoor/utils/: __init__.py  logger.py  plot.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/BatchMonitor/: index.tsx
frontend/src/components/ConfigForm/: FieldRenderer.tsx  index.tsx
frontend/src/components/ExperimentControl/: index.tsx
frontend/src/components/ExperimentHistory/: index.tsx
frontend/src/components/LogViewer/: index.tsx
frontend/src/pages/: BatchPage.tsx  ConfigPage.tsx  HistoryPage.tsx  SummaryPage.tsx
scripts/: batch_runner.py  plot.py  summarize_results.py
