[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-backdoor-system"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "GPL-3.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_backdoor"]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fl_backdoor.server.server:app"
clientapp = "fl_backdoor.client.client:app"

[tool.flwr.app.config]

# =========================================================
# 实验核心开关（最高层）
# =========================================================

attack = "frequency"              # none / badnets / wanet / frequency / frequency_dct / frequency_fft

client-defense = "none"   # none / identity / feature_filter
detection = "clustering_detection"      # none / anomaly_detection / cosine_detection / score_detection / clustering_detection

defense = "none"               # none / norm_clipping / trimmed_mean / krum


# =========================================================
# 联邦学习基础参数（与安全无关）
# =========================================================

num-server-rounds = 15
fraction-evaluate = 0.2
local-epochs = 2
learning-rate = 0.01
batch-size = 32
seed = 42


# =========================================================
# 攻击参数（Attack）
# =========================================================

malicious-ratio = 0.2
poison-rate = 0.3
target-label = 0
trigger-size = 4

# --- WaNet ---
wanet-noise = 0.2

# --- Frequency Attack ---
frequency-mode = "fft"            # dct / fft
frequency-band = "high"            # low / high
frequency-window-size = 6
frequency-intensity = 0.35
frequency-mix-alpha = 1.0


# =========================================================
# 客户端防御（Client Defense）
# =========================================================

client-defense-filter-ratio = 0.1
client-defense-min-keep = 16
client-defense-scoring-batch-size = 128
client-defense-use-label-centroids = true
client-defense-label-blend-alpha = 0.5
client-defense-min-class-samples = 8


# =========================================================
# 服务端检测（Detection） 
# =========================================================

# detection = "cosine_detection"   # ← 用这个开启测试

# --- Anomaly Detection ---
detection-z-threshold = 2.5     # 异常检测阈值（z-score）
detection-top-k = 2             # 最多剔除多少客户端
detection-min-clients = 3       # 至少参与检测的客户端数（防止小样本误判）

# --- Cosine Detection ---
detection-cosine-floor = 0.5
detection-min-kept-clients = 5
detection-max-reject-fraction = 0.3
detection-enable-filter = true

# --- Score Detection ---
detection-percentile = 80
detection-weight-norm = 1.0
detection-weight-cosine = 1.0
# detection-enable-filter = true
# detection-min-kept-clients = 2

# --- Clustering Detection --
detection-min-silhouette = 0.05
detection-cluster-score-gap = 0.15


# =========================================================
# 服务端聚合防御（Aggregation Defense）
# =========================================================

# --- Norm Clipping ---
defense-clip-norm = 3.0

# --- Trimmed Mean ---
# defense-trim-ratio = 0.2
defense-trim-k = 2

# --- Krum ---
defense-num-malicious = 2
defense-krum-k = 1


# =========================================================
# 实验管理（Logging / Naming）
# =========================================================

results-dir = "results"

run-name = "badnets_featfilter_cosine_krum"
# 推荐格式：
# attack + client-defense + detection + aggregation
# 例如：
# badnets_featfilter_normdetect_krum