[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-backdoor-system"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "GPL-3.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tomli>=2.0.0", 
    "tomli-w>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_backdoor"]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fl_backdoor.server.server:app"
clientapp = "fl_backdoor.client.client:app"

[tool.flwr.app.config]

# =========================================================
# 实验核心开关（最高层）
# =========================================================

# 恶意客户端选择模式
# - random: 每轮随机选择（基于 seed + round 确定性采样）
# - fixed: 使用 attack-fixed-clients 指定的固定客户端 ID
attack-malicious-mode = "fixed"   # random / fixed

# 固定恶意客户端 ID 列表（仅在 attack-malicious-mode = "fixed" 时生效）
# 格式：逗号分隔或数组，如 [0,1,2] 或 "0,1,2"
attack-fixed-clients = "0,1,2"

# 攻击类型（全局开关）
# - none: 无攻击（基线）
# - badnets: 像素级贴片触发器
# - wanet: 弹性扭曲 + 噪声隐形后门
# - frequency / frequency_dct / frequency_fft: 频域攻击（三者等价，通过 frequency-mode 区分 DCT/FFT）
attack = "frequency"              # none / badnets / wanet / frequency / frequency_dct / frequency_fft

# 客户端防御类型（数据层预处理，训练前执行）
# - none: 无客户端防御
# - identity: 恒等变换（同 none）
# - feature_filter: 基于特征激活值的样本过滤（移除可疑样本）
client-defense = "none"           # none / identity / feature_filter

# 服务端检测类型（聚合前过滤恶意更新）
# - none: 无检测
# - anomaly_detection: 基于 z-score 的范数异常检测
# - cosine_detection: 基于余弦相似度的方向异常检测
# - score_detection: 基于百分位数的分数阈值过滤
# - clustering_detection: K-means 聚类 + 轮廓系数自动分组（推荐）
detection = "clustering_detection"  # none / anomaly_detection / cosine_detection / score_detection / clustering_detection

# 服务端聚合防御类型（拜占庭鲁棒聚合）
# - none: FedAvg（无防御）
# - norm_clipping: 梯度裁剪（限制单客户端更新范数）
# - trimmed_mean: 修剪平均（去掉最大最小更新后平均）
# - krum: Krum 算法（选择距离其他更新最近的 k 个更新）
defense = "krum"                  # none / norm_clipping / trimmed_mean / krum


# =========================================================
# 联邦学习基础参数（所有攻击/防御共用）
# =========================================================

# 总训练轮数
num-server-rounds = 2

# 每轮参与评估的客户端比例（0~1）
fraction-evaluate = 0.2

# 每轮本地训练轮次（E）
local-epochs = 2

# 本地训练学习率
learning-rate = 0.01

# 本地批大小
batch-size = 32

# 全局随机种子（影响攻击、防御、客户端选择的确定性）
seed = 42


# =========================================================
# 攻击参数（Attack）
# 适用范围：badnets / wanet / frequency
# =========================================================

# 恶意客户端比例（attack-malicious-mode 为 fix 时会被覆盖，仅在 random 模式使用）
# malicious-ratio = 0.2

# 投毒比例：恶意客户端中，多少比例的训练样本被植入后门（0~1）
# 适用范围：所有攻击
poison-rate = 0.3

# 后门目标标签（将触发器样本分类为该标签）
# 适用范围：所有攻击
target-label = 0

# 触发器尺寸（像素）
# 适用范围：badnets / wanet
trigger-size = 4

# --- WaNet 专用参数 ---
# 扭曲噪声强度（0~1），值越大变形越明显
wanet-noise = 0.2

# --- Frequency Attack 专用参数 ---
# 频域变换类型
# - dct: 离散余弦变换
# - fft: 快速傅里叶变换
frequency-mode = "fft"            # dct / fft

# 频带选择
# - low: 篡改低频分量（隐蔽性较好）
# - high: 篡改高频分量（对防御更具挑战）
frequency-band = "high"           # low / high

# 频域窗口大小（None 表示全图）
frequency-window-size = 6

# 频域篡改强度（0~1）
frequency-intensity = 0.35

# 频域混合系数（原始图像与频域篡改的混合比例，1.0 表示完全替换）
frequency-mix-alpha = 1.0


# =========================================================
# 客户端防御参数（Client Defense）
# 当前适用范围：feature_filter
# =========================================================

# 样本过滤比例（保留多少比例的低分样本，0~1）
client-defense-filter-ratio = 0.1

# 最少保留样本数（防止过滤过多导致空数据集）
client-defense-min-keep = 16

# 特征评分时的批大小
client-defense-scoring-batch-size = 128

# 是否使用标签感知的类中心进行评分
client-defense-use-label-centroids = true

# 标签混合系数（0~1），控制全局特征与标签类中心的混合程度
client-defense-label-blend-alpha = 0.5

# 每个类别的最少样本数（用于计算类中心）
client-defense-min-class-samples = 8


# =========================================================
# 服务端检测参数（Detection）
# 各检测器使用其专属前缀的参数
# =========================================================

# --- Anomaly Detection 专用（基于 z-score 的范数异常）---
# 适用范围：anomaly_detection

# z-score 阈值，超过此值的客户端被视为可疑
detection-z-threshold = 2.5

# 最多剔除客户端数（超出后不再剔除）
detection-top-k = 2

# 最少参与检测的客户端数（低于此值跳过检测，防止小样本误判）
detection-min-clients = 3


# --- Cosine Detection 专用（余弦相似度方向异常）---
# 适用范围：cosine_detection

# 余弦相似度下限，低于此值的客户端被视为可疑
detection-cosine-floor = 0.5

# 最少保留客户端数（过滤后低于此值时回退到保留分数最高的客户端）
# Cosine detection 和 Score detection 共用
detection-min-kept-clients = 5

# 最大拒绝比例（0~1），超过此比例时自动放宽阈值
detection-max-reject-fraction = 0.3

# 是否启用过滤（false 时保留所有客户端）
# Cosine detection 和 Score detection 共用
detection-enable-filter = true


# --- Score Detection 专用（百分位数阈值过滤）---
# 适用范围：score_detection

# 百分位数阈值（0~100），分数高于此百分位的客户端被视为可疑
# Clustering detection 和 Score detection 共用
detection-percentile = 80

# 分数加权系数：norm_z 的权重
detection-weight-norm = 1.0

# 分数加权系数：余弦相似度（1 - cosine）的权重
detection-weight-cosine = 1.0

#（以下参数继承自 Cosine Detection，见上）
# detection-enable-filter = true
# detection-min-kept-clients = 2


# --- Clustering Detection 专用（K-means + 轮廓系数）---
# 适用范围：clustering_detection

# 最小轮廓系数阈值（低于此值表示聚类效果差，回退到 Score Detection）
detection-min-silhouette = 0.05

# 聚类间分数差距阈值（最大簇与次大簇的分数差低于此值时回退）
detection-cluster-score-gap = 0.15


# =========================================================
# 服务端聚合防御参数（Aggregation Defense）
# =========================================================

# --- Norm Clipping 专用 ---
# 适用范围：norm_clipping

# 梯度裁剪阈值（L2 范数上限）
defense-clip-norm = 3.0


# --- Trimmed Mean 专用 ---
# 适用范围：trimmed_mean

# 修剪比例（0~0.5），去掉最大/最小各 trim_ratio * n 个客户端
# defense-trim-ratio = 0.2

# 修剪数量（绝对值），去掉最大/最小各 trim_k 个客户端
# 优先级高于 defense-trim-ratio
defense-trim-k = 2


# --- Krum 专用 ---
# 适用范围：krum

# 预估的恶意客户端数量（用于计算距离时排除的客户端数）
defense-num-malicious = 2

# Krum 选择的客户端数量（最终参与聚合的客户端数）
defense-krum-k = 1


# =========================================================
# 实验管理（Logging / Naming）
# =========================================================

# 结果保存目录（自动创建）
results-dir = "results"

# 实验名称（用于生成 CSV 和 PNG 文件名）
# 推荐格式：{attack}_{client-defense}_{detection}_{defense}
run-name = "test"